--- a/tutorials/tutorialS2_1.ipynb
+++ b/tutorials/tutorialS2_1.ipynb
@@ -37,12 +37,12 @@
     "\n",
     "The equation involving specific heats $C_p$ (specific heat at\n",
     "constant pressure) and $C_V$ (specific heat at constant volume) is\n",
-    "        defined as:\n",
-    "        \\begin{align*}\n",
-    "          C_p-C_V &= T\\left(\\frac{\\partial V}{\\partial T}\\right)_P\n",
-    "                    \\left(\\frac{\\partial P}{\\partial T}\\right)_V\n",
-    "        \\end{align*}\n",
-    "        Using the ideal gas equation: $PV=RT$ show, that $C_p-C_V=R$.\n",
+    "defined as:\n",
+    "\\begin{align*}\n",
+    "  C_p-C_V &= T\\left(\\frac{\\partial V}{\\partial T}\\right)_P\n",
+    "            \\left(\\frac{\\partial P}{\\partial T}\\right)_V\n",
+    "\\end{align*}.\n",
+    "Using the ideal gas equation, $PV=RT$, show that $C_p-C_V=R$.\n",
     "\n",
     "    \n",
     " "
