updates to solutions to tutorial 6 S1

--- a/tutorials/tutorialS1_6-soln.ipynb
+++ b/tutorials/tutorialS1_6-soln.ipynb
@@ -410,7 +410,7 @@
     "\\end{align*}\n",
     "Substituting this back into the previous equation, we find:\n",
     "\\begin{align*}\n",
-    "-2\\left[y^{1/2}-y^{1/2} +\\ln\\frac{1 - y^{1/2}}{1 - y_0^{1/2}}\\right] &= x\n",
+    "- 2 \\left[y^{1/2}-y_0^{1/2} +\\ln\\frac{1 - y^{1/2}}{1 - y_0^{1/2}}\\right] &= x\n",
     "\\end{align*}\n",
     "which tells us the (dimensionless) time at which the (dimensionless) water level takes on\n",
     "specific values.\n"
@@ -1167,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
