minor update to tutorial for latex rendering

--- a/tutorials/tutorialS2_1.ipynb
+++ b/tutorials/tutorialS2_1.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +19,7 @@
     " \\left(\\frac{\\partial P}{\\partial T}\\right)_V\n",
     "  \\left(\\frac{\\partial T}{\\partial V}\\right)_P\n",
     "   \\left(\\frac{\\partial V}{\\partial P}\\right)_T\n",
-    " \\end{equation*}\n",
+    "\\end{equation*}\n",
     "Comment on the result - does it seem intuitive?"
    ]
   },
@@ -56,6 +57,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +68,7 @@
     "u(x,t)          \n",
     "&= \\left[ A\\sin(\\omega x/\\alpha) + B \\cos(\\omega x/\\alpha) \\right]\n",
     "            [C\\sin(\\omega t)+D\\cos(\\omega t)]\n",
-    "        \\end{align*}\n",
+    "\\end{align*}\n",
     "where $\\alpha=(E/\\rho)^{1/2}$, $E$ is modulus of elasticity, $\\rho$ is\n",
     "density of rod, and $\\omega$ is the natural frequency of vibration.  Show that $u(x,t)$ satisfies the wave equation:\n",
     "\\begin{align*}\n",
@@ -82,6 +84,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,7 +93,7 @@
     "\\begin{align*}\n",
     "f = \\frac{xy}{x^2+y^2}\n",
     "       .\n",
-    "        \\end{align*}"
+    "\\end{align*}"
    ]
   },
   {
@@ -108,6 +111,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +125,7 @@
     "and $A$ is the area.  If $C$ can be measured to within $1$\\%, $\\rho$\n",
     "to within $0.5$\\%, $v$ to within $0.6$\\%, and $A$ to within $0.1$\\%,\n",
     "approximate the maximum percentage error in the value of $L$. Note:\n",
+    "\n",
     "\\begin{align*}\n",
     "df &= \\frac{\\partial f}{\\partial x} dx + \\frac{\\partial f}{\\partial y} dy  \n",
     "\\\\\n",
