updating error in tutorial 3 soln

--- a/tutorials/tutorialS2_3-soln.ipynb
+++ b/tutorials/tutorialS2_3-soln.ipynb
@@ -233,7 +233,7 @@
     "## Model solution for Q3\n",
     "\n",
     "Function to be minimized is the distance from the origin to the value of $x$, $y$, and $z$.\n",
-    "$$$$\\begin{align*}\n",
+    "$$\\begin{align*}\n",
     "    D(x,y,z) &= \\sqrt{x^2+y^2+z^2}\n",
     "\\end{align*}$$\n",
     "Minima will satisfy $\\nabla D(x,y,z)=\\lambda \\nabla h(x,y,z)$,\n",
