--- a/tutorials/tutorialS2_8.ipynb
+++ b/tutorials/tutorialS2_8.ipynb
@@ -69,6 +69,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,7 +80,7 @@
     "water, which is fully mixed, and has two inlet streams and two outlet\n",
     "streams.  Water at temperature $T_{R, {\\rm in}}$ enters tank 1 at a\n",
     "volumetric flow rate $\\dot{V}_{R,{\\rm in}}$, and water at temperature\n",
-    "$T_{L, {\\rm in}}$ enters tank 1 at a volumetric flow rate\n",
+    "$T_{L, {\\rm in}}$ enters tank $N$ at a volumetric flow rate\n",
     "$\\dot{V}_{L,{\\rm in}}$.\n",
     "\n",
     "<img src=\"tank-series.png\" width=\"800\">\n",
