fix to solution

--- a/tutorials/tutorialS1_7-soln.ipynb
+++ b/tutorials/tutorialS1_7-soln.ipynb
@@ -554,7 +554,7 @@
     "To determine the variation of the temperature of the meteor with time, we perform an energy balance.\n",
     "\\begin{align*}\n",
     "  \\frac{dU}{dt}\n",
-    "  &= F_d v_\\infty - \\pi R^2 \\sigma T^4\n",
+    "  &= F_d v_\\infty - S \\sigma T^4\n",
     "  \\\\\n",
     "  mC\\frac{dT}{dt}\n",
     "  &= C_d(\\pi R^2)\\frac{1}{2}v_\\infty^3 - 4 \\pi R^2 \\sigma T^4\n",
