--- a/notebooks/lecture_20251103.ipynb
+++ b/notebooks/lecture_20251103.ipynb
@@ -114,8 +114,8 @@
         "\n",
         "\n",
         "x = sp.symbols('x')\n",
-        "a_func = sp.sympify( K*rho*g/A )            # this is a(x)\n",
-        "f_func = sp.sympify( dotm_in / (rho*A) )    # this is f(x)\n",
+        "a_func = K*rho*g/A             # this is a(x)\n",
+        "f_func = dotm_in / (rho*A)     # this is f(x)\n",
         "\n",
         "\n",
         "# Everything below here is general, and does not depend on the particular form\n",
