--- a/notebooks/lecture_20251103.ipynb
+++ b/notebooks/lecture_20251103.ipynb
@@ -121,7 +121,7 @@
         "# Everything below here is general, and does not depend on the particular form\n",
         "# of the functions a(x) and f(x).\n",
         "const = sp.symbols('const')\n",
-        "A_func = sp.integrate(a, x)\n",
+        "A_func = sp.integrate(a_func, x)\n",
         "print('A(x) = ', A_func)\n",
         "\n",
         "\n",
