expanding solutions for tutorial 8

--- a/tutorials/tutorialS1_8-soln.ipynb
+++ b/tutorials/tutorialS1_8-soln.ipynb
@@ -821,7 +821,84 @@
    "source": [
     "### Part 4:\n",
     "\n",
-    "We can do this by hand, but why bother..."
+    "To solve this differential equation, we first need to find the\n",
+    "solutions to the associated homogeneous equation\n",
+    "\\begin{align*}\n",
+    "y'' - 2y' -3y &= 0\n",
+    "\\end{align*}\n",
+    "The characteristic equation is\n",
+    "\\begin{align*}\n",
+    "\\lambda^2 - 2\\lambda - 3 &= 0\n",
+    "\\\\\n",
+    "(\\lambda-3)(\\lambda+1)\n",
+    "&= 0\n",
+    "\\end{align*}\n",
+    "which has the solutions $\\lambda=3$ and $\\lambda=-1$.  Consequently,\n",
+    "the solutions to the associated homogeneous equation are:\n",
+    "\\begin{align*}\n",
+    "y_1(x) &= e^{3x}\n",
+    "\\\\\n",
+    "y_2(x) &= e^{-x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "To obtain a particular solution to the original inhomogeneous equation,\n",
+    "we note that:\n",
+    "\\begin{align*}\n",
+    "W(x) &= y_1(x) y_2'(x) - y_1'(x) y_2(x)\n",
+    "\\\\\n",
+    "&= e^{3x} (-e^{-x}) - (3e^{3x}) e^{-x}\n",
+    "\\\\\n",
+    "&= -4 e^{2x}\n",
+    "\\\\\n",
+    "c_1(x)\n",
+    "&= - \\int dx \\frac{y_2(x) f(x)}{W(x)} \n",
+    "\\\\\n",
+    "&= - \\int dx \\frac{e^{-x}}{-4e^{2x}}(6x-2+3e^{2x})\n",
+    "\\\\\n",
+    "&=  \\frac{1}{4} \\int dx (6xe^{-3x}-2e^{-3x}+3e^{-x})\n",
+    "\\\\\n",
+    "&=  \\frac{1}{4} \\Bigg[-2(x+1/3)e^{-3x}+\\frac{2}{3}e^{-3x}-3e^{-x}\\Bigg]\n",
+    "\\\\\n",
+    "&=  \\frac{1}{4} \\Bigg[-2x e^{-3x}-3e^{-x}\\Bigg]\n",
+    "\\\\\n",
+    "c_2(x)\n",
+    "&= \\int dx \\frac{y_1(x) f(x)}{W(x)}\n",
+    "\\\\\n",
+    "&= \\int dx \\frac{e^{3x} }{-4e^{2x}} (6x-2+3e^{2x})\n",
+    "\\\\\n",
+    "&= -\\frac{1}{4} \\int dx  (6(x-1)e^{x}-2e^{x}+3e^{3x})\n",
+    "\\\\\n",
+    "&= -\\frac{1}{4}\\Bigg[(6x-8)e^{x}+e^{3x}\\Bigg]\n",
+    "\\end{align*}\n",
+    "The particular solution is given by\n",
+    "\\begin{align*}\n",
+    "y_p(x)\n",
+    "&= c_1(x) y_1(x) + c_2(x) y_2(x)\n",
+    "\\\\\n",
+    "&= \\frac{1}{4} \\left[-2x-3e^{-x}\\right]e^{3x}\n",
+    "-\\frac{1}{4}\\left[(6x-8)e^{x}+e^{3x}\\right] e^{-x}\n",
+    "\\\\\n",
+    "&= \\frac{1}{4} \\Bigg[-2x-3e^{2x}\\Bigg]\n",
+    "-\\frac{1}{4}\\Bigg[6x-8-2+e^{2x}\\Bigg]\n",
+    "\\\\\n",
+    "&= \\frac{1}{4} \\Bigg[-8x+8-4e^{2x}\\Bigg]\n",
+    "\\\\\n",
+    "&= -2x+2-e^{2x}\n",
+    "\\end{align*}\n",
+    "So the general solution is\n",
+    "\\begin{align*}\n",
+    "y(x)\n",
+    "&= y_p(x) + C_1 y_1(x) + C_2 y_2(x)\n",
+    "\\\\\n",
+    "&=\n",
+    "-2x+2-e^{2x}\n",
+    "+ C_1 e^{3x}\n",
+    "+ C_2 e^{-x}\n",
+    "\\end{align*}\n",
+    "where $C_1$ and $C_2$ are arbitrary constants.\n",
+    "\n",
+    "\n",
+    "Note we can also try to automate the solution procedure using Python..."
    ]
   },
   {
@@ -872,7 +949,108 @@
    "id": "16379ffe",
    "metadata": {},
    "source": [
-    "### Part 5:"
+    "### Part 5:\n",
+    "\n",
+    "The associated homogeneous equation is for this second order ODE is\n",
+    "\\begin{align*}\n",
+    "y'' + 2y' + y &= 0\n",
+    "\\end{align*}\n",
+    "and the characteristic equation is\n",
+    "\\begin{align*}\n",
+    "\\lambda^2 + 2\\lambda +1  &= 0\n",
+    "\\\\\n",
+    "(\\lambda+1)^2\n",
+    "&= 0\n",
+    "\\end{align*}\n",
+    "which has a double root at $\\lambda=-1$.  Consequently, the solutions\n",
+    "to the associated homogeneous equation are:\n",
+    "\\begin{align*}\n",
+    "y_1(x) &= e^{-x}\n",
+    "\\\\\n",
+    "y_2(x) &= x e^{-x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "To obtain a particular solution to the original inhomogeneous equation,\n",
+    "we use:\n",
+    "\\begin{align*}\n",
+    "W(x) &= y_1(x) y_2'(x) - y_1'(x) y_2(x)\n",
+    "\\\\\n",
+    "&= e^{-x} (e^{-x}-xe^{-x}) - (-e^{x}) (x e^{-x})\n",
+    "\\\\\n",
+    "&= e^{-2x}\n",
+    "\\\\\n",
+    "c_1(x)\n",
+    "&= - \\int dx \\frac{y_2(x) f(x)}{W(x)} \n",
+    "\\\\\n",
+    "&= -\\int dx \\frac{xe^{-x} }{e^{-2x}} 2\\sin x\n",
+    "\\\\\n",
+    "&= -2 \\int dx x e^{x} \\sin x\n",
+    "\\\\\n",
+    "&= -2 \\frac{1}{2} e^{x}[\n",
+    "  x(\\sin x - \\cos x) + \\cos x\n",
+    "]\n",
+    "\\\\\n",
+    "&= - e^{x}[\n",
+    "  x(\\sin x - \\cos x) + \\cos x\n",
+    "]\n",
+    "\\\\\n",
+    "c_2(x)\n",
+    "&= \\int dx \\frac{y_1(x) f(x)}{W(x)}\n",
+    "\\\\\n",
+    "&= \\int dx \\frac{e^{-x}}{e^{-2x}} 2\\sin x\n",
+    "\\\\\n",
+    "&= 2 \\int dx\\,e^{x}\\sin x \n",
+    "\\\\\n",
+    "&=  2 \\frac{e^x}{2}(\\sin x - \\cos x) \n",
+    "\\\\\n",
+    "&=  e^x (\\sin x - \\cos x) \n",
+    "\\end{align*}\n",
+    "The particular solution is given by\n",
+    "\\begin{align*}\n",
+    "y_p(x)\n",
+    "&= c_1(x) y_1(x) + c_2(x) y_2(x)\n",
+    "\\\\\n",
+    "&=\n",
+    "- e^{x}[\n",
+    "  x(\\sin x - \\cos x) + \\cos x\n",
+    "] e^{-x}\n",
+    "+ e^x (\\sin x - \\cos x) x e^{-x}\n",
+    "\\\\\n",
+    "&=\n",
+    "- \\cos x\n",
+    "\\end{align*}\n",
+    "So the general solution is\n",
+    "\\begin{align*}\n",
+    "y(x)\n",
+    "&= y_p(x) + C_1 y_1(x) + C_2 y_2(x)\n",
+    "\\\\\n",
+    "&=\n",
+    "-\\cos x\n",
+    "+ C_1 e^{-x}\n",
+    "+ C_2 x e^{-x}\n",
+    "\\end{align*}\n",
+    "where $C_1$ and $C_2$ are known constants.\n",
+    "\n",
+    "To determine the values of these constants, we use the initial conditions\n",
+    "$y(0)=1$ and $y'(0)=0$.  From the first initial condition, we find:\n",
+    "\\begin{align*}\n",
+    "y(0) &= - 1 + C_1 = 1\n",
+    "\\\\\n",
+    "C_1 &= 2\n",
+    "\\end{align*}\n",
+    "The second initial condition yields:\n",
+    "\\begin{align*}\n",
+    "y'(x) &= \\sin x - C_1 e^{-x} + C_2 e^{-x} - C_2 x e^{-x}\n",
+    "\\\\\n",
+    "y'(0) &= - C_1 + C_2 = 0\n",
+    "\\\\\n",
+    "C_2 &= C_1 = 2\n",
+    "\\end{align*}\n",
+    "The final solution is then\n",
+    "\\begin{align*}\n",
+    "y(x) &= -\\cos x + 2 (1+x) e^{-x}\n",
+    ".\n",
+    "\\end{align*}\n"
    ]
   },
   {
@@ -944,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
