updates to solutions for tutorial 7

--- a/tutorials/tutorialS1_7-soln.ipynb
+++ b/tutorials/tutorialS1_7-soln.ipynb
@@ -208,10 +208,31 @@
    "id": "a4a6f792-8aee-4208-9c9d-aa7a14a13d76",
    "metadata": {},
    "source": [
-    "To determine the mean concentration $\\bar{c}$ at the end of the pipe, we first need to determine the total amount of the solute in a small disk of length $\\Delta z$ at the end of the pipe.  The total amount of solute in the pipe is\n",
+    "To determine the mean concentration $\\bar{c}$ at the end of the pipe, we first need to determine the total amount of the solute in a small disk of length $\\Delta z$ at the end of the pipe.  \n",
+    "We assume that the disk is thin enough that the concentration of the pollutant does\n",
+    "not vary significantly along the thickness of the disk; the\n",
+    "concentration does, however, vary in the radial direction (i.e.\\ from\n",
+    "the center to the edge of the disk).  To deal with this issue, we\n",
+    "divide the disk into several thin \"rings\" of inner radius $r$ and\n",
+    "outer radius $r+d r$.  We assume that $\\Delta r$ is small enough that\n",
+    "we can assume that the concentration of the pollutant is the same\n",
+    "throughout the ring and equal to $c(r)$.  The volume of this ring is\n",
+    "approximately $\\Delta z 2\\pi r\\,d r$.  The total amount of pollutant\n",
+    "in the ring $d \\Delta N$ is given by the product of the volume of the\n",
+    "ring multiplied by the concentration within the ring:\n",
+    "\\begin{align*}\n",
+    "d\\Delta N &= (\\Delta z 2\\pi r\\,d r) \\,c(r)\n",
+    "\\end{align*}\n",
+    "To determine the amount of pollutant $\\Delta N$ in the entire disk, we\n",
+    "need to sum the amount of pollutant in each ring $d\\Delta N$, which\n",
+    "just means that we need to integrate the variable $r$ from $0$ to $R$:\n",
+    "The total amount of solute in the thin disk at the end of the pipe is then\n",
     "$$\n",
     "\\begin{align*}\n",
-    "\\Delta N &= \\int_0^R \\Delta z 2\\pi r dr\\, c(r)\n",
+    "\\Delta N \n",
+    "&= \\int_0^R d\\Delta N(r)\n",
+    "\\\\\n",
+    "&= \\int_0^R \\Delta z 2\\pi r dr\\, c(r)\n",
     "\\end{align*}\n",
     "$$\n",
     "To get the mean concentration, we need to divide the total amount of solute in the disk by the volume of the disk, which is $\\Delta V = \\Delta z \\pi R^2$.  This gives\n",
@@ -1402,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
